--- a/frontend/src/components/pots/PotCard.scss
+++ b/frontend/src/components/pots/PotCard.scss
@@ -1,14 +1,16 @@
+@use '../../styles/colors';
 @use '../../styles/screens';
+@use '../../styles/spaces';
 
 .potCard {
   border-radius: spaces.$radiusMS;
   background-color: colors.$white-0;
-  padding: 24px;
+  padding: spaces.$spaceL;
   display: flex;
   flex-direction: column;
 
   @include screens.phone {
-    padding: 16px;
+    padding: spaces.$spaceM;
     min-width: 0;
   }
 }
@@ -18,5 +20,5 @@
   background-color: colors.$white-0;
   display: flex;
   flex-direction: column;
-  row-gap: 32px;
+  row-gap: spaces.$spaceXL;
 }
