--- a/frontend/src/components/overlay/OverlayDropdownIcon.scss
+++ b/frontend/src/components/overlay/OverlayDropdownIcon.scss
@@ -1,7 +1,9 @@
 @use '../../styles/functions';
 
+$custom-space-horizontal-correction: functions.to-rem(21px);
+
 .dropdownColorIcon {
   top: calc(50% - 3px);
-  right: functions.to-rem(21px);
+  right: $custom-space-horizontal-correction;
   position: absolute;
 }
