--- a/frontend/src/components/budgets/BudgetCard/BudgetCard.scss
+++ b/frontend/src/components/budgets/BudgetCard/BudgetCard.scss
@@ -4,6 +4,9 @@
 @use '../../../styles/screens';
 @use '../../../styles/spaces';
 
+$budget-card-bar-height: functions.to-rem(24px);
+$budget-card-bar-max-height: functions.to-rem(32px);
+
 .budgetCard {
   border-radius: spaces.$radiusMS;
   background-color: colors.$white-0;
@@ -25,7 +28,7 @@
 
 .budgetCardBarCurrent {
   border-radius: spaces.$radiusXS;
-  height: functions.to-rem(24px);
+  height: $budget-card-bar-height;
   width: var(--barCurrentWidthPercent);
   max-width: calc(100% - 8px);
   top: calc(50% - 12px);
@@ -122,7 +125,7 @@
 .budgetCardBarMax {
   border-radius: spaces.$radiusXS;
   background-color: colors.$beige-100;
-  height: functions.to-rem(32px);
+  height: $budget-card-bar-max-height;
   position: relative;
 }
 
